--- a/style.css
+++ b/style.css
@@ -54,14 +54,14 @@ a {
 
 a:hover, a:active {
     text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px #fff,
-    0 0 82px #fff,
-    0 0 92px #fff,
-    0 0 102px #fff,
-    0 0 151px #fff;
+    0 0 7px #eba65e,
+    0 0 10px #eba65e,
+    0 0 21px #eba65e,
+    0 0 42px #eba65e,
+    0 0 82px #eba65e,
+    0 0 92px #eba65e,
+    0 0 102px #eba65e,
+    0 0 151px #eba65e;
 }
 
 /* .website-content: Column-Flexbox(?). Vertical, it will likely be easier to place images that way. */
